# animboom-toolkit

./: .clang-tidy  .gitignore  Cargo.toml  README.md
.github/workflows/: rust-checks.yaml
crates/animboom-core/: Cargo.toml
crates/animboom-ffi/: Cargo.toml  build.rs
crates/animboom-ffi/src/: project.rs  types.rs
crates/animboom-toolkit/: Cargo.toml  build.rs
crates/animboom-toolkit/src/: lib.rs  types.rs
crates/animboom-toolkit/src/ffi/: mod.rs  project.rs  types.rs
crates/ffi/: .gitignore  Cargo.toml  build.rs
crates/ffi/src/: lib.rs
git-hooks/: pre-commit
src/: lib.rs
